--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,11 @@
     <title>Open Reservation</title>
     <script src="https://kit.fontawesome.com/ea22e6cb6e.js" crossorigin="anonymous"></script>
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1033.0.min.js"></script>
+    <meta property="og:url" content="https://open-reservation.herokuapp.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Open Reservation" />
+    <meta property="og:description" content="Browse and review local restaurants" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/61606838/144531759-6d4da8c5-e7a4-44b2-8f74-a3f1c39a0daa.jpg" />
 
     <!-- <link rel="favicon" type="image/png" href="favicon.ico"/> -->
     <!-- <link rel="favicon" type="image/png" href="./images/android-chrome-192x192.png"/> -->
